--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "comment": "app",
   "version": "1.0.1",
   "description": "Simple React Hello World",
   "main": "index.js",
@@ -21,11 +21,13 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0"
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "prettier": "1.16.4"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --progress -p --config webpack.config.js --watch",
     "watch": "webpack-dev-server --content-base build --hot --watch"
   },
   "keywords": [
